@@ -202,6 +202,10 @@ the new version of the file again.)
 
 * Changes in Emacs 27.1
 
+---
+** New option 'comint-highlight-input'.
+Allow to keep the original highlighting untouched.
+
 ** emacsclient
 
 +++
